test/fail/bad-obj-base.mo
{ true | a = 3 };
let act = actor {};
{ act | a = 3 };
{ { y = 3; z = "H" } and { zx = 3 : Nat64 } and { zx = 3 : Nat64 } | y = -25 };
